--- a/index.html
+++ b/index.html
@@ -32,11 +32,21 @@
           <!--Menu desktop-->
             <nav class="col-3 col-sm-5 col-lg-9">
               <ul class=" desktop col-12 paginas">
-                  <li><a href="index.html">Inicio</a></li>
-                  <li><a href="pages.html/nosotros.html">Nosotros</a></li>
-                  <li><a href="pages.html/productos.html">Productos</a></li>
-                  <li><a href="pages.html/tienda.html">Tienda</a></li>
-                  <li><a href="pages.html/contacto.html">Contacto</a></li>
+                  <li>
+                    <a href="index.html">Inicio</a>
+                  </li>
+                  <li>
+                    <a href="pages.html/nosotros.html">Nosotros</a>
+                  </li>
+                  <li>
+                    <a href="pages.html/productos.html">Productos</a>
+                  </li>
+                  <li>
+                    <a href="pages.html/tienda.html">Tienda</a>
+                  </li>
+                  <li>
+                    <a href="pages.html/contacto.html">Contacto</a>
+                  </li>
               </ul>
             </nav>
             <!--Logo, titulo y menu versión móvil-->
@@ -83,7 +93,8 @@
             <p class="parrafo animate__animated animate__fadeInUp">Papas para todos somos una empresa con mas de 25 años en el rubro.
                   Producimos y comercializamos papas consumo, mini papas, papines y papas noissette
                   con alcance a toda la Argentina con la mision de llegar con un producto de altisima calidad 
-                  a todos los hogares. <br>
+                  a todos los hogares. 
+                  <br>
                   <br>
                   Donde estamos? clik <a href="#bajar">aqui</a>
             </p>
@@ -101,7 +112,7 @@
                     <img src="./img/Papines.jpg" alt="papines" class="papas1">
                   </a>                  
                 </div>
-                <a href="./pages.html/tienda.html">
+                <a href="./pages.html/tienda.html" class="aTienda">
                   <p class="nombre">Papines</p>
                 </a>               
               </div>
@@ -111,7 +122,7 @@
                     <img src="./img/papines 2.jpg" alt="papas noissette" class="papas2">
                   </a>                  
                 </div>
-                <a href="./pages.html/tienda.html">
+                <a href="./pages.html/tienda.html" class="aTienda">
                   <p class="nombre">Papas noissette</p>
                 </a>                               
               </div>
@@ -121,7 +132,7 @@
                     <img src="./img/papines 3.jpg" alt="mini papa" class="papas3">
                   </a>                  
               </div>
-                  <a href="./pages.html/tienda.html">
+                  <a href="./pages.html/tienda.html" class="aTienda">
                     <p class="nombre">Mini papa</p>
                   </a>                               
               </div>
@@ -131,7 +142,7 @@
                     <img src="./img/papines 4.jpg" alt="papa consumo" class="papas4">
                   </a>                  
                 </div>
-                <a href="./pages.html/tienda.html">
+                <a href="./pages.html/tienda.html" class="aTienda">
                   <p class="nombre">Papa consumo</p>
                 </a>               
               </div>
@@ -141,7 +152,7 @@
                       <img src="./img/papas 12.jpeg" alt="papa andina" class="papas1">
                     </a>                   
                   </div>
-                  <a href="./pages.html/tienda.html">
+                  <a href="./pages.html/tienda.html" class="aTienda">
                     <p class="nombre">Papa andina</p>
                   </a>                                
                 </div>
@@ -151,7 +162,7 @@
                       <img src="./img/papas13.jpg" alt="papa sudeste" class="papas2">
                     </a>                    
                   </div>
-                  <a href="./pages.html/tienda.html">
+                  <a href="./pages.html/tienda.html" class="aTienda">
                     <p class="nombre">Papa sudeste</p>
                   </a>                                   
                 </div>
@@ -161,7 +172,7 @@
                       <img src="./img/papas14.jpeg" alt="papa copetin" class="papas3">
                     </a>                    
                   </div>
-                    <a href="./pages.html/tienda.html">
+                    <a href="./pages.html/tienda.html" class="aTienda">
                       <p class="nombre">Papa copetin</p>
                     </a>                                  
                 </div>
@@ -171,7 +182,7 @@
                       <img src="./img/papas15.jpeg" alt="papa patagónica" class="papas4">
                     </a>                    
                   </div>
-                    <a href="./pages.html/tienda.html">
+                    <a href="./pages.html/tienda.html" class="aTienda">
                       <p class="nombre">Papa patagónica</p>
                     </a>                                   
                 </div>
