--- a/pages.html/contacto.html
+++ b/pages.html/contacto.html
@@ -32,11 +32,21 @@
         <!--Menu desktop-->
           <nav class="col-12 col-sm-10 col-lg-9">
             <ul class="desktop col-12 paginas">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="productos.html">Productos</a></li>
-                <li><a href="tienda.html">Tienda</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
+                <li>
+                  <a href="../index.html">Inicio</a>
+                </li>
+                <li>
+                  <a href="nosotros.html">Nosotros</a>
+                </li>
+                <li>
+                  <a href="productos.html">Productos</a>
+                </li>
+                <li>
+                  <a href="tienda.html">Tienda</a>
+                </li>
+                <li>
+                  <a href="contacto.html">Contacto</a>
+                </li>
             </ul>
           </nav>
            <!--Logo, titulo y menu versión móvil-->
