--- a/pages.html/productos.html
+++ b/pages.html/productos.html
@@ -32,11 +32,21 @@
             <!--Menu desktop-->
               <nav class="col-12 col-sm-10 col-lg-9">
                 <ul class=" desktop col-12 paginas">
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="productos.html">Productos</a></li>
-                    <li><a href="tienda.html">Tienda</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
+                    <li>
+                      <a href="../index.html">Inicio</a>
+                    </li>
+                    <li>
+                      <a href="nosotros.html">Nosotros</a>
+                    </li>
+                    <li>
+                      <a href="productos.html">Productos</a>
+                    </li>
+                    <li>
+                      <a href="tienda.html">Tienda</a>
+                    </li>
+                    <li>
+                      <a href="contacto.html">Contacto</a>
+                    </li>
                 </ul>
               </nav>
                <!--Logo, titulo y menu versión móvil-->
@@ -77,77 +87,53 @@
         <div class="container">
             <h1 class="col-12 animate__animated animate__fadeInDown">Nuestros productos</h1>
                 <div class="row">
-                    <div class="col-12 col-lg-3 imgT">                        
-                        <a href="tienda.html">
+                    <div class="col-12 col-lg-3 imgT">          
                           <img src="../img/papines 2.jpg" alt="Papas noissette" class="imgProducto">
-                          <p class="descrip">Papas noissette</p>
-                        </a>
+                          <p class="descrip">Papas
                     </div>
                     <div class="col-12 col-lg-3 imgT">                        
-                        <a href="tienda.html">
                           <img src="../img/papines 5.jpg" alt="Papines premium" class="imgProducto">
-                           <p class="descrip">Papines premium</p>
-                        </a>
+                            <p class="descrip">Papines premium</p>
                     </div>
                     <div class="col-12 col-lg-3 imgT">                        
-                        <a href="tienda.html">
                           <img src="../img/papas18.jpeg" alt="Papa andina" class="imgProducto">
-                           <p class="descrip">Papa andina</p>
-                        </a>
+                            <p class="descrip">Papa andina</p>
                     </div>
                     <div class="col-12 col-lg-3 imgT">                        
-                        <a href="tienda.html">
                           <img src="../img/papines 4.jpg" alt="Papa consumo" class="imgProducto">
-                           <p class="descrip">Papa consumo</p>
-                        </a>
+                            <p class="descrip">Papa consumo</p>
                     </div>
                     <div class="col-12 col-lg-3 imgT">                       
-                        <a href="tienda.html">
                           <img src="../img/Papines.jpg" alt="Papines" class="imgProducto">
-                           <p class="descrip">Papines</p>
-                        </a>
+                            <p class="descrip">Papines</p>
                     </div>
                     <div class="col-12 col-lg-3 imgT">                        
-                        <a href="tienda.html">
                           <img src="../img/papines 3.jpg" alt="Mini papa" class="imgProducto">
-                           <p class="descrip">mini papa</p>
-                        </a>
+                            <p class="descrip">mini papa</p>
                     </div>
                     <div class="col-12 col-lg-3 imgT">                        
-                        <a href="tienda.html">
                           <img src="../img/papas17.jpg" alt="Papa andina" class="imgProducto">
-                           <p class="descrip">Papa andina</p>
-                        </a>
+                            <p class="descrip">Papa andina</p>
                     </div>
                     <div class="col-12 col-lg-3 imgT">                        
-                        <a href="tienda.html">
                           <img src="../img/papas16.jpeg" alt="Papa sudeste" class="imgProducto">
-                           <p class="descrip">Papa sudeste</p>
-                        </a>
+                            <p class="descrip">Papa sudeste</p>
                     </div>
                     <div class="col-12 col-lg-3 imgT">                        
-                        <a href="tienda.html">
                           <img src="../img/papines 4.jpg" alt="Papa especial" class="imgProducto">
-                           <p class="descrip">Papa especial</p>
-                        </a>
+                            <p class="descrip">Papa especial</p>
                     </div>
                     <div class="col-12 col-lg-3 imgT">                        
-                        <a href="tienda.html">
                           <img src="../img/papas15.jpeg" alt="Papa patagonica" class="imgProducto">
-                           <p class="descrip">Papa patagonica</p>
-                        </a>
+                            <p class="descrip">Papa patagonica</p>
                     </div>
                     <div class="col-12 col-lg-3 imgT">                        
-                        <a href="tienda.html">
                           <img src="../img/papas14.jpeg" alt="Papa copetin" class="imgProducto">
-                           <p class="descrip">Papa copetin</p>
-                        </a>
+                            <p class="descrip">Papa copetin</p>
                     </div>
                     <div class="col-12 col-lg-3 imgT">                      
-                        <a href="tienda.html">
                           <img src="../img/papas13.jpg" alt="Papa Cordoba" class="imgProducto">
-                           <p class="descrip">Papa Cordoba</p>
-                        </a>
+                            <p class="descrip">Papa Cordoba</p>
                     </div>
                 </div>
             </div>
