--- a/pages.html/tienda.html
+++ b/pages.html/tienda.html
@@ -27,16 +27,27 @@
             </a>
             </div>
             <div class="col-12 col-sm-10 col-lg-2 ">
-               <p class="tituloLogo">Papas Para Todos</p>
+               <p class="tituloLogo">
+                  Papas Para Todos</p>
             </div>
             <!--Menu desktop-->
             <nav class="col-12 col-sm-10 col-lg-9">
                <ul class="desktop col-12 paginas">
-                  <li><a href="../index.html">Inicio</a></li>
-                  <li><a href="nosotros.html">Nosotros</a></li>
-                  <li><a href="productos.html">Productos</a></li>
-                  <li><a href="tienda.html">Tienda</a></li>
-                  <li><a href="contacto.html">Contacto</a></li>
+                  <li>
+                     <a href="../index.html">Inicio</a>
+                  </li>
+                  <li>
+                     <a href="nosotros.html">Nosotros</a>
+                  </li>
+                  <li>
+                     <a href="productos.html">Productos</a>
+                  </li>
+                  <li>
+                     <a href="tienda.html">Tienda</a>
+                  </li>
+                  <li>
+                     <a href="contacto.html">Contacto</a>
+                  </li>
                </ul>
             </nav>
              <!--Logo, titulo y menu versión móvil-->
