--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <!--Logo, titulo y menu versión móvil-->
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
               <div class="container-fluid">
-                <a class="navbar-brand" href="./index.html" id="logo2" >
+                <a class="navbar-brand" href="./index.html" id="logo2">
                   <img src="./img/logo papas.png" alt="imagen logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -192,8 +192,8 @@
         <div class="container-fluid">
           <div class="col-12 col-sm-10 col-lg-6">
             <p class="irAseccion">Descubre mas en la seccion Productos y nuestra Tienda</p>
-            <a class="subirDesk" href="#logo" >ir arriba</a>
-            <a class="subirM" href="#logo2" >ir arriba</a>
+            <a class="subirDesk" href="#logo" >Ir arriba</a>
+            <a class="subirM" href="#logo2" >Ir arriba</a>
           </div>         
         </div>      
         <!--pie de página-->            
