--- a/pages.html/nosotros.html
+++ b/pages.html/nosotros.html
@@ -116,8 +116,8 @@
          <!--Links para subir versión desktop y mobile-->
         <div class="container-fluid">
           <div class="col-12 col-sm-10 col-lg-1">
-            <a class="subirDesk" href="#logo" >ir arriba</a>
-            <a class="subirM" href="#logo2" >ir arriba</a>
+            <a class="subirDesk" href="#logo" >Ir arriba</a>
+            <a class="subirM" href="#logo2" >Ir arriba</a>
           </div>
         </div>   
     </main>
