--- a/pages.html/contacto.html
+++ b/pages.html/contacto.html
@@ -84,7 +84,7 @@
   </header>
     <main>
       <!--Titulo formulario-->
-      <h1 class="animate__animated animate__fadeInDown">Completa nuestro formulario</h1>
+      <h1 class="tituloForm animate__animated animate__fadeInDown">Completa nuestro formulario</h1>
       <!--Formulario de contacto-->
         <div class="container-fluid">
             <div class="row">                
@@ -143,8 +143,8 @@
          <!--Links para subir versión desktop y mobile-->
         <div class="container-fluid">
           <div class="col-12 col-sm-10 col-lg-1">
-            <a class="subirDesk" href="#logo" >ir arriba</a>
-            <a class="subirM" href="#logo2" >ir arriba</a>
+            <a class="subirDesk" href="#logo" >Ir arriba</a>
+            <a class="subirM" href="#logo2" >Ir arriba</a>
           </div>
         </div>        
     </main>
