--- a/pages.html/productos.html
+++ b/pages.html/productos.html
@@ -138,16 +138,16 @@
                 </div>
             </div>
             <!--Link para ir a tienda-->
-            <div class="col-12 col-sm-10 col-lg-6">
+            <div class="contenedorTienda col-12 col-sm-10 col-lg-12">
                 <div class="IrAtienda tienda10">
-                    Adquierelos en nuestra Tienda <a class="link" href="./tienda.html">ir ahora</a>
+                    Adquierelos en nuestra Tienda <a class="link" href="./tienda.html">Click aquí</a>
                 </div>
             </div>
              <!--Links para subir versión desktop y mobile-->
             <div class="container-fluid">
                 <div class="col-12 col-sm-10 col-lg-1">
-                  <a class="subirDesk" href="#logo" >ir arriba</a>
-                  <a class="subirM" href="#logo2" >ir arriba</a>
+                  <a class="subirDesk" href="#logo" >Ir arriba</a>
+                  <a class="subirM" href="#logo2" >Ir arriba</a>
                 </div>
               </div>   
       </main>
