--- a/pages.html/tienda.html
+++ b/pages.html/tienda.html
@@ -27,8 +27,7 @@
             </a>
             </div>
             <div class="col-12 col-sm-10 col-lg-2 ">
-               <p class="tituloLogo">
-                  Papas Para Todos</p>
+               <p class="tituloLogo">Papas Para Todos</p>
             </div>
             <!--Menu desktop-->
             <nav class="col-12 col-sm-10 col-lg-9">
@@ -96,8 +95,8 @@
                   <img src="../img/Papines.jpg" alt="papines">
                </div>            
                <div id="precio2">
-                  <p class="precio">papines 0.00</p>
-               <img id="carrito" src="../img/carrito.png" alt="comprar">  
+                  <p class="precio">Papines 0.00</p>
+                  <img id="carrito" src="../img/carrito.png" alt="comprar">  
                </div>
             </div>           
             <div class="fotoTienda col-12 col-sm-6 col-lg-3">
@@ -105,7 +104,7 @@
                <img src="../img/Papines.jpg" alt="papines">
             </div> 
                <div id="precio2">
-                  <p class="precio">papines 0.00</p>
+                  <p class="precio">Papines 0.00</p>
                   <img id="carrito" src="../img/carrito.png" alt="comprar"> 
                </div>
             </div> 
@@ -114,7 +113,7 @@
                <img src="../img/Papines.jpg" alt="papines">
             </div>             
                <div id="precio2">
-                  <p class="precio">papines 0.00</p>
+                  <p class="precio">Papines 0.00</p>
                   <img id="carrito" src="../img/carrito.png" alt="comprar">
                </div>
             </div> 
@@ -123,7 +122,7 @@
                <img src="../img/Papines.jpg" alt="papines">
             </div>               
                <div id="precio2">
-                  <p class="precio">papines 0.00</p>
+                  <p class="precio">Papines 0.00</p>
                   <img id="carrito" src="../img/carrito.png" alt="comprar"> 
                </div>
             </div> 
@@ -132,7 +131,7 @@
                <img src="../img/Papines.jpg" alt="papines">
             </div> 
                <div id="precio2">
-                  <p class="precio">papines 0.00</p>
+                  <p class="precio">Papines 0.00</p>
                   <img id="carrito" src="../img/carrito.png" alt="comprar"> 
                </div>
             </div> 
@@ -141,7 +140,7 @@
                <img src="../img/Papines.jpg" alt="papines">
             </div>            
                <div id="precio2">
-                  <p class="precio">papines 0.00</p>
+                  <p class="precio">Papines 0.00</p>
                   <img id="carrito" src="../img/carrito.png" alt="comprar"> 
                </div>
             </div> 
@@ -150,7 +149,7 @@
                <img src="../img/Papines.jpg" alt="papines">
             </div>             
                <div id="precio2">
-                  <p class="precio">papines 0.00</p>
+                  <p class="precio">Papines 0.00</p>
                   <img id="carrito" src="../img/carrito.png" alt="comprar"> 
                </div>
             </div> 
@@ -159,7 +158,7 @@
                <img src="../img/Papines.jpg" alt="papines">
             </div>              
                <div id="precio2">
-                  <p class="precio">papines 0.00</p>
+                  <p class="precio">Papines 0.00</p>
                   <img id="carrito" src="../img/carrito.png" alt="comprar"> 
                </div>
             </div> 
@@ -168,7 +167,7 @@
                <img src="../img/Papines.jpg" alt="papines">
             </div>             
                <div id="precio2">
-                  <p class="precio">papines 0.00</p>
+                  <p class="precio">Papines 0.00</p>
                   <img id="carrito" src="../img/carrito.png" alt="comprar">
                </div>
             </div> 
@@ -177,7 +176,7 @@
                <img src="../img/Papines.jpg" alt="papines">
             </div>             
                <div id="precio2">
-                  <p class="precio">papines 0.00</p>
+                  <p class="precio">Papines 0.00</p>
                   <img id="carrito" src="../img/carrito.png" alt="comprar"> 
                </div>
             </div> 
@@ -186,7 +185,7 @@
                <img src="../img/Papines.jpg" alt="papines">
             </div>              
                <div id="precio2">
-                  <p class="precio">papines 0.00</p>
+                  <p class="precio">Papines 0.00</p>
                   <img id="carrito" src="../img/carrito.png" alt="comprar">
                </div>
             </div> 
@@ -195,7 +194,7 @@
                <img src="../img/Papines.jpg" alt="papines">
             </div>             
                <div id="precio2">
-                  <p class="precio">papines 0.00</p>
+                  <p class="precio">Papines 0.00</p>
                   <img id="carrito" src="../img/carrito.png" alt="comprar">
                </div>
             </div> 
@@ -204,8 +203,8 @@
           <!--Links para subir versión desktop y mobile-->
          <div class="container-fluid">
             <div class="col-12 col-sm-10 col-lg-1">
-               <a class="subirDesk" href="#logo" >ir arriba</a>
-               <a class="subirM" href="#logo2" >ir arriba</a>
+               <a class="subirDesk" href="#logo" >Ir arriba</a>
+               <a class="subirM" href="#logo2" >Ir arriba</a>
             </div>
          </div>         
    </main>
